[gd_scene load_steps=13 format=2]

[ext_resource path="res://battle_scenes/NarvaBattleCamera.gd" type="Script" id=1]
[ext_resource path="res://assets/BattleOfNarvaMap.png" type="Texture" id=2]
[ext_resource path="res://battle_units/sw_infantry.tscn" type="PackedScene" id=3]
[ext_resource path="res://battle_units/ru_infantry.tscn" type="PackedScene" id=4]
[ext_resource path="res://battle_scenes/NarvaBattle.gd" type="Script" id=5]
[ext_resource path="res://battle_units/sw_light_cavalery.tscn" type="PackedScene" id=6]
[ext_resource path="res://battle_units/sw_heavy_cavalery.tscn" type="PackedScene" id=7]
[ext_resource path="res://battle_units/ru_light_cavalery.tscn" type="PackedScene" id=8]
[ext_resource path="res://battle_units/ru_heavy_cavalery.tscn" type="PackedScene" id=9]
[ext_resource path="res://battle_units/sw_cannons.tscn" type="PackedScene" id=10]
[ext_resource path="res://battle_units/ru_cannons.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 5.89726

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="BattleOfNarvaMap" type="Sprite" parent="."]
position = Vector2( 1244, -68 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="units" type="Node2D" parent="."]

[node name="sw_infantry1" parent="units" instance=ExtResource( 3 )]
position = Vector2( 93, 845 )
rotation = 0.63606

[node name="sw_infantry2" parent="units" instance=ExtResource( 3 )]
position = Vector2( -43, 701 )
rotation = 0.661661

[node name="ru_infantry1" parent="units" instance=ExtResource( 4 )]
position = Vector2( 620, 353 )
rotation = -2.53435
scale = Vector2( 1.44025, 1.46352 )

[node name="sw_heavy_cavalery1" parent="units" instance=ExtResource( 7 )]
position = Vector2( -86, 927 )
rotation = 0.578573
scale = Vector2( 1.44025, 1.46352 )

[node name="sw_light_cavalery1" parent="units" instance=ExtResource( 6 )]
position = Vector2( 322, 954 )
rotation = 0.319123
scale = Vector2( 1.44025, 1.46352 )

[node name="ru_infantry2" parent="units" instance=ExtResource( 4 )]
position = Vector2( 415, 186 )
rotation = -2.69206
scale = Vector2( 1.44025, 1.46352 )

[node name="ru_light_cavalery1" parent="units" instance=ExtResource( 8 )]
position = Vector2( 825, 458 )
rotation = -2.53785
scale = Vector2( 1.44106, 1.44106 )

[node name="ru_heavy_cavalery1" parent="units" instance=ExtResource( 9 )]
position = Vector2( 1016, 596 )
rotation = -2.41884
scale = Vector2( 1.45155, 1.45155 )

[node name="sw_cannons1" parent="units" instance=ExtResource( 10 )]
position = Vector2( 155, 1033 )
rotation = 0.464734
scale = Vector2( 1.46527, 1.46527 )

[node name="ru_cannons1" parent="units" instance=ExtResource( 11 )]
position = Vector2( 833, 275 )
rotation = -2.54472
scale = Vector2( 1.40403, 1.40403 )

[node name="NarvaBattleCamera" type="KinematicBody2D" parent="."]
position = Vector2( 226, 720 )
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NarvaBattleCamera"]
position = Vector2( -0.999996, -3.05176e-05 )
shape = SubResource( 1 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="NarvaBattleCamera"]
position = Vector2( -1, 0 )
scale = Vector2( 0.333333, 0.333333 )
current = true

[node name="Panel" type="Panel" parent="NarvaBattleCamera"]
anchor_left = -0.036
margin_left = 170.0
margin_top = 110.0
margin_right = 210.0
margin_bottom = 150.0
rect_scale = Vector2( 2.05165, 1 )

[node name="Label" type="Label" parent="NarvaBattleCamera/Panel"]
margin_left = 0.974823
margin_top = 2.0
margin_right = 90.9748
margin_bottom = 50.0
rect_scale = Vector2( 0.198467, 0.338965 )
text = "Einheit:
attack modus:
HP:"

[node name="TextureRect" type="TextureRect" parent="NarvaBattleCamera/Panel"]
margin_left = -208.288
margin_top = -104.333
margin_right = -168.288
margin_bottom = -64.3333
rect_scale = Vector2( 1.11744, 3.58782 )
expand = true
